# checkdeps

./: .vars.ini  CHANGELOG.md  MANIFEST.in  Makefile  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml
checkdeps/: cli.py  distinfo.py  distinfo_inference.py  import_parser.py  metadata.py  requirements.py
checkdeps/tests/: __init__.py  __main__.py  cli.py  distinfo.py  distinfo_inference.py  import_parser.py  metadata.py
